--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Vue -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>   
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/vue.resource/1.2.0/vue-resource.min.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/red_style.css" rel="stylesheet">
@@ -133,7 +133,7 @@
 
     <!-- Sick Cats Section -->
     <section id="sickcat">
-        
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -382,7 +382,7 @@
                                     </li>
                                 </ul>
                                 <button type="button" class="btn btn-default btn-lg btn-xlg" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
-                                <button class="btn btn-warning btn-lg btn-xlg" data-dismiss="modal"><i class="fa fa-credit-card"></i> Ayuda</button>
+                                <button class="btn btn-warning btn-lg btn-xlg ayudanos-button" v-bind:data-modal="'sickcatModal' + index"><i class="fa fa-credit-card"></i> Ayuda</button>
                             </div>
                         </div>
                     </div>
@@ -413,11 +413,16 @@
 
     <script>
     $( window ).on( "load", function() {
-        $('.modal').on('hidden.bs.modal', function (e) {
-          $('html, body').animate({
+
+        $('.ayudanos-button').click(function () {
+            var modal = $(this).data('modal');
+            console.log(modal);
+            $('#'+modal).modal('toggle');
+            $('html, body').animate({
                 scrollTop: $("#ayudanos").offset().top
-          }, 2000);
+            }, 2000);
         });
+        
     });
     </script>
 
